k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: localhost/backend-backend:latest  # Use a imagem correta, conforme seu docker-compose
        imagePullPolicy: Never
        ports:
        - containerPort: 8000  # Porta correta
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000  # Porta do backend Laravel
      targetPort: 8000  # Porta de destino no container
  type: ClusterIP
