k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend  # Use o label que você usou no Deployment
  ports:
    - protocol: TCP
      port: 8000  # Porta pública do backend
      targetPort: 8000  # Porta no container
  type: ClusterIP  # Apenas acessível dentro do cluster (alterar para LoadBalancer, se necessário)
