k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend  # Use o label que você usou no Deployment
  ports:
    - protocol: TCP
      port: 80  # Porta pública exposta
      targetPort: 3000  # Porta do frontend React
  type: LoadBalancer  # Expor o frontend para fora do cluster (para produção, pode ser NodePort também)
